# Impulse

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  PhysicsSimulator.sln  README.md  build.sh
App/: CMakeLists.txt  Main.cpp  vcpkg.json
Impulse/: CMakeLists.txt
Impulse/Audio/: CMakeLists.txt
Impulse/Audio/lib/: lib.cpp
Impulse/Core/: CMakeLists.txt
Impulse/Core/include/Impulse/Core/: Core.h  Entity.h  Macros.h  RectangularPrism.h  Sphere.h  World.h
Impulse/Core/lib/: RectangularPrism.cpp  Sphere.cpp  World.cpp
Impulse/Physics/: CMakeLists.txt
Impulse/Physics/lib/: PhysicsEngine.cpp
Impulse/Render/: CMakeLists.txt
Impulse/Render/assets/: main.vert
Impulse/Render/include/Impulse/Render/: Graphics.h  Render.h  Shader.h  Window.h
Impulse/Render/lib/: Graphics.cpp  Shader.cpp  Window.cpp
Impulse/include/Impulse/: Impulse.h
PhysicsEngine/: CMakeLists.txt  PhysicsEngine.cpp  PhysicsEngine.vcxproj  PhysicsEngine.vcxproj.filters  entity.cpp  entity.h  rectangle.cpp  rectangle.h  rectangular_prism.cpp  rectangular_prism.h  vcpkg-configuration.json  world.cpp  world.h
PhysicsEngine/include/: PhysicsEngine.h  RectangularPrism.h  entity.h  pch.h  rectangular_prism.h  sphere.h  world.h
PhysicsEngine/lib/: RectangularPrism.cpp  rectangular_prism.cpp  sphere.cpp  world.cpp
PhysicsGraphics/: CMakeLists.txt
PhysicsGraphics/assets/: main.frag
PhysicsGraphics/include/: graphics.h  shader.h  window.h
PhysicsGraphics/lib/: graphics.cpp  shader.cpp  window.cpp
PhysicsMath/: CMakeLists.txt  PhysicsMath.vcxitems  mat2.cpp  vec2.cpp  vec3.cpp
PhysicsMath/lib/: CMakeLists.txt
PhysicsSimulations/: CMakeLists.txt  Main.cpp  PhysicsSimulations.cpp  PhysicsSimulations.vcxproj  PhysicsSimulations.vcxproj.filters  vcpkg.json
PhysicsSimulations/assets/: test.frag  test.vert
PhysicsSimulations/glad/: glad.c
PhysicsSimulations/include/: graphics.h  window.h
PhysicsSimulations/include/glad/: glad.h
PhysicsSimulations/lib/Graphics/: graphics.cpp  shader.cpp  window.cpp
